Wish list mhtml modified.

--- a/src/main/resources/templates/wish-list.html
+++ b/src/main/resources/templates/wish-list.html
@@ -147,7 +147,7 @@
                                 <div class="cart_buttons_inner ml-sm-auto d-flex flex-row align-items-start justify-content-start flex-wrap">
                                     <div class="button button_clear trans_200"><a href="#" id="clear_list" class="clear_wish_list">clear wish
                                         list</a></div>
-                                    <div class="button button_continue trans_200"><a href="/checkout">continue
+                                    <div class="button button_continue trans_200"><a href="/">continue
                                         shopping</a></div>
                                 </div>
                             </div>
@@ -256,7 +256,7 @@
                     position: 'topRight',
                     color: 'green'
                 });
-                window.location.href = "/wish-list";
+                window.location.href = "wish-list";
                 setTimeout(function () {
                     history.pushState(null, null, ' ');
                 }, 100);
@@ -268,10 +268,8 @@
                     color: 'red'
                 });
             })
-        } else window.location.href = "/wish-list";
+        } else window.location.href = "wish-list";
     });
-
-
 
     /*]]>*/
 </script>
