--- a/src/main/resources/static/styles/admin-panel-product.css
+++ b/src/main/resources/static/styles/admin-panel-product.css
@@ -34,3 +34,19 @@
 .choose_file_label:hover a {
     color: #fbaa1d;
 }
+
+.deneme::-webkit-input-placeholder {
+    font-size: 14px !important;
+    font-weight: 400 !important;
+    color: #969696 !important;
+}
+.deneme {
+    background: #FFFFFF;
+    padding-left: 20px;
+    color: #000000;
+    -webkit-transition: all 200ms ease;
+    -moz-transition: all 200ms ease;
+    -ms-transition: all 200ms ease;
+    -o-transition: all 200ms ease;
+    transition: all 200ms ease;
+}
