--- a/src/main/resources/templates/admin_panel/_product.html
+++ b/src/main/resources/templates/admin_panel/_product.html
@@ -180,21 +180,23 @@
                             </div>
                         </div>
                         <div class="row m-t-20">
-                            <div class="col-md-4">
+                            <div class="col-md-12">
                                 <div class="login-text p-b-10" style="color: black;">
                                     Short Description
                                 </div>
                                 <input type="text" id="book_short_description_input"
-                                       class="checkout_input form-control"
+                                       class="checkout_input form-control" maxlength="255"
                                        placeholder="Short Description" required="required">
                             </div>
-                            <div class="col-md-8">
+                        </div>
+                        <div class="row m-t-20">
+                            <div class="col-md-12">
                                 <div class="login-text p-b-10" style="color: black;">
                                     Long Description
                                 </div>
-                                <input type="text" id="book_long_description_input"
-                                       class="checkout_input form-control"
-                                       placeholder="Long Description" required="required">
+                                <textarea type="text" id="book_long_description_input" maxlength="255"
+                                       class="deneme form-control different-control w-100" rows="3"
+                                          placeholder="Long Description" required="required"></textarea>
                             </div>
                         </div>
                         <div class="row m-t-20">
@@ -428,22 +430,23 @@
                             </div>
                         </div>
                         <div class="row m-t-20">
-                            <div class="col-md-4">
+                            <div class="col-md-12">
                                 <div class="login-text p-b-10" style="color: black;">
                                     Short Description
                                 </div>
                                 <input type="text" id="ebook_short_description_input"
-                                       class="checkout_input form-control"
+                                       class="checkout_input form-control" maxlength="255"
                                        placeholder="Short Description" required="required">
                             </div>
-                            <div class="col-md-8">
+                        </div>
+                        <div class="row m-t-20">
+                            <div class="col-md-12">
                                 <div class="login-text p-b-10" style="color: black;">
                                     Long Description
                                 </div>
-
-                                <input type="text" id="ebook_long_description_input"
-                                       class="checkout_input form-control"
-                                       placeholder="Long Description" required="required">
+                                <textarea type="text" id="ebook_long_description_input" maxlength="255"
+                                          class="deneme form-control different-control w-100" rows="3"
+                                          placeholder="Long Description" required="required"></textarea>
                             </div>
                         </div>
                         <div class="row m-t-20">
@@ -640,21 +643,23 @@
                             </div>
                         </div>
                         <div class="row m-t-20">
-                            <div class="col-md-4">
+                            <div class="col-md-12">
                                 <div class="login-text p-b-10" style="color: black;">
                                     Short Description
                                 </div>
                                 <input type="text" id="audiobook_short_description_input"
-                                       class="checkout_input form-control"
+                                       class="checkout_input form-control" maxlength="255"
                                        placeholder="Short Description" required="required">
                             </div>
-                            <div class="col-md-8">
+                        </div>
+                        <div class="row m-t-20">
+                            <div class="col-md-12">
                                 <div class="login-text p-b-10" style="color: black;">
                                     Long Description
                                 </div>
-                                <input type="text" id="audiobook_long_description_input"
-                                       class="checkout_input form-control"
-                                       placeholder="Long Description" required="required">
+                                <textarea type="text" id="audiobook_long_description_input" maxlength="255"
+                                          class="deneme form-control different-control w-100" rows="3"
+                                          placeholder="Long Description" required="required"></textarea>
                             </div>
                         </div>
                         <div class="row m-t-20">
@@ -770,23 +775,24 @@
                             </div>
                         </div>
                         <div class="row m-t-20">
-                            <div class="col-md-4">
+                            <div class="col-md-12">
                                 <div class="login-text p-b-10" style="color: black;">
                                     Short Description
                                 </div>
 
                                 <input type="text" id="ebook_reader_short_description_input"
-                                       class="checkout_input form-control"
+                                       class="checkout_input form-control" maxlength="255"
                                        placeholder="Short Description" required="required">
                             </div>
-                            <div class="col-md-8">
+                        </div>
+                        <div class="row m-t-20">
+                            <div class="col-md-12">
                                 <div class="login-text p-b-10" style="color: black;">
                                     Long Description
                                 </div>
-
-                                <input type="text" id="ebook_reader_long_description_input"
-                                       class="checkout_input form-control"
-                                       placeholder="Long Description" required="required">
+                                <textarea type="text" id="ebook_reader_long_description_input" maxlength="255"
+                                          class="deneme form-control different-control w-100" rows="3"
+                                          placeholder="Long Description" required="required"></textarea>
                             </div>
                         </div>
                         <div class="row m-t-20">
@@ -1104,22 +1110,24 @@
                             </div>
                         </div>
                         <div class="row m-t-20">
-                            <div class="col-md-4">
+                            <div class="col-md-12">
                                 <div class="login-text p-b-10" style="color: black;">
                                     Short Description
                                 </div>
                                 <input type="text"
                                        id="ebook_reader_case_short_description_input"
-                                       class="checkout_input form-control"
+                                       class="checkout_input form-control" maxlength="255"
                                        placeholder="Short Description" required="required">
                             </div>
-                            <div class="col-md-8">
+                        </div>
+                        <div class="row m-t-20">
+                            <div class="col-md-12">
                                 <div class="login-text p-b-10" style="color: black;">
                                     Long Description
                                 </div>
-                                <input type="text" id="ebook_reader_case_long_description_input"
-                                       class="checkout_input form-control"
-                                       placeholder="Long Description" required="required">
+                                <textarea type="text" id="ebook_reader_case_long_description_input" maxlength="255"
+                                          class="deneme form-control different-control w-100" rows="3"
+                                          placeholder="Long Description" required="required"></textarea>
                             </div>
                         </div>
                         <div class="row m-t-20">
@@ -1278,21 +1286,23 @@
                             </div>
                         </div>
                         <div class="row m-t-20">
-                            <div class="col-md-4">
+                            <div class="col-md-12">
                                 <div class="login-text p-b-10" style="color: black;">
                                     Short Description
                                 </div>
                                 <input type="text" id="book_case_short_description_input"
-                                       class="checkout_input form-control"
+                                       class="checkout_input form-control" maxlength="255"
                                        placeholder="Short Description" required="required">
                             </div>
-                            <div class="col-md-8">
+                        </div>
+                        <div class="row m-t-20">
+                            <div class="col-md-12">
                                 <div class="login-text p-b-10" style="color: black;">
                                     Long Description
                                 </div>
-                                <input type="text" id="book_case_long_description_input"
-                                       class="checkout_input form-control"
-                                       placeholder="Long Description" required="required">
+                                <textarea type="text" id="book_case_long_description_input" maxlength="255"
+                                          class="deneme form-control different-control w-100" rows="3"
+                                          placeholder="Long Description" required="required"></textarea>
                             </div>
                         </div>
                         <br>
